# fec_kcp

./: CMakeLists.txt  README.md
include/: fec_kcp.h  fec_kcp_common.h  fec_manager.h
lib/kcp/source/: ikcp.c
lib/libfec/include/: common.h  fec.h  fec_decode.h  fec_encode.h  noncopyable.h  random_generator.h  timeout_map.h
lib/libfec/lib/include/: rs.h
lib/libfec/lib/source/: fec.c
lib/libfec/source/: common.cpp  fec_decode.cpp  fec_encode.cpp  random_generator.cpp  timeout_map.cpp
samples/: fec_kcp_client.cpp  fec_kcp_server.cpp
source/: fec_kcp.cpp  fec_kcp_common.cpp  fec_manager.cpp
